SDK updates and new items added in spinner.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,11 @@
         <item>Sugar</item>
         <item>Tea</item>
         <item>Tea Leaves</item>
+        <item>Floor cleaner</item>
+        <item>Detergent Soap</item>
+        <item>Ginger</item>
+        <item>Floor cleaning cloth</item>
+        <item>Wiper</item>
+        <item>Colin</item>
     </string-array>
 </resources>
